--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 </head>
 
 <body>
-   <!-- <header>
-      <h1>Etch a Sketch</h1>
-   </header> -->
+
    <div class="container">
       <div class="draw-box">
          <h1>Etch a Sketch</h1>
          <div class="draw-grid"></div>
+         <button id="clear-grid" hidden>Clear</button>
       </div>
    </div>
-   <footer>Github</footer>
+   <footer><a href="https://github.com/spacemango/odin-etchy-sketchy">spacemango @ github</footer>
 
 </body>
 
