Added click and drag events

--- a/index.html
+++ b/index.html
@@ -19,19 +19,18 @@
          <div class="options">
             <label for="grid-range">Select grid size:</label>
             <div class="grid-slider">
-               <p id="rangeValue">16 x 16</p>
+               <p id="range-value"></p>
                <input type="range" id="grid-range" name="grid-range" min="2" max="100" value="16"
                   oninput=getValue(this.value)>
-
             </div>
-            <button id="apply-btn">Apply</button>
          </div>
          <div class="draw-grid"></div>
-
          <button id="clear-grid" hidden>Clear</button>
       </div>
    </div>
-   <footer><a href="https://github.com/spacemango/odin-etchy-sketchy">spacemango @ github</footer>
+   <footer>
+      <a href="https://github.com/spacemango/odin-etchy-sketchy">spacemango @ github
+   </footer>
 </body>
 
 </html>
