--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
    <div class="container">
       <div class="draw-box">
-         <h1>Etch a Sketch</h1>
+         <h1>Etchy Sketchy</h1>
          <div class="options">
             <label for="grid-range">Select grid size:</label>
             <div class="grid-slider">
